添加星图导师功能说明 - 通过DeepSeek大模型设定榜样指导

--- a/templates/notes/welcome.html
+++ b/templates/notes/welcome.html
@@ -30,9 +30,13 @@
                             <i class="bi bi-calendar-check text-primary"></i>
                             <span>每日回顾 - 重温过去的想法</span>
                         </div>
-                        <div class="feature-item">
+                        <div class="feature-item mb-3">
                             <i class="bi bi-search text-primary"></i>
                             <span>快捷搜索 - 瞬间找到需要的内容</span>
+                        </div>
+                        <div class="feature-item">
+                            <i class="bi bi-stars text-primary"></i>
+                            <span>星图导师 - 通过DeepSeek大模型设定榜样指导</span>
                         </div>
                     </div>
                 </div>
