新增标签筛选功能：支持点击标签筛选对应笔记，包含AJAX分页和清除筛选功能

--- a/templates/notes/includes/tag_tree.html
+++ b/templates/notes/includes/tag_tree.html
@@ -6,7 +6,8 @@
     </span>
     {% endif %}
     
-    <a href="{% url 'notes:tag_detail' tag.id %}" class="tag-link {% if tag.id == current_tag.id %}active{% endif %}">
+    <a href="#" class="tag-link tag-filter-link {% if tag.id == current_tag.id %}active{% endif %}" 
+       data-tag-id="{{ tag.id }}" data-tag-name="{{ tag.name }}">
         {{ tag.name }}
         <span class="tag-count">({{ tag.notes.count }})</span>
     </a>
