--- a/templates/notes/random_review.html
+++ b/templates/notes/random_review.html
@@ -18,7 +18,7 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-start">
                                 <div class="note-content">
-                                    <p class="card-text">{{ note.content|linebreaks }}</p>
+                                    <p class="card-text">{{ note.content|safe }}</p>
                                     <div class="mt-2">
                                         {% for tag in note.tags.all %}
                                             <span class="badge tag-badge" style="background-color: {{ tag.color }}">{{ tag }}</span>
