--- a/templates/notes/daily_review.html
+++ b/templates/notes/daily_review.html
@@ -3,7 +3,7 @@
 {% block title %}每日回顾 - Flomo2{% endblock %}
 
 {% block content %}
-<div class="row">
+<div class="row" style="margin-top: 80px;">
     <div class="col-md-12">
         <div class="mb-4">
             <h4>今日回顾</h4>
